--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -1,6 +1,6 @@
-<div class="modal fade mu-kindergarten-context" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade mu-kids-results-aborted mu-kindergarten-context" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content danger">
       <div class="modal-body">
         <button type="button" class="mu-kindergarten-close-button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
@@ -11,7 +11,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="mu-kindergarten-modal-markdown">
-                <%= exercise.description_context %>
+                <img src="https://images2.alphacoders.com/100/1003880.png">
               </div>
             </div>
           </div>
