Show medal on guide corollary

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_medal.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_medal.scss
@@ -3,6 +3,12 @@
     float: left;
   }
 
+  &.corollary {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   &.unacquired {
     filter: grayscale(100%);
   }
