--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content <%= icon_class_for @assignment if @assignment%>">
       <div class="modal-body">
-        <button type="button" class="mu-kindergarten-close-button" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
