--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content danger">
       <div class="modal-body">
-        <button type="button" class="mu-kindergarten-close-button" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
@@ -10,9 +10,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <div class="mu-kindergarten-modal-markdown">
-                <img src="https://images2.alphacoders.com/100/1003880.png">
-              </div>
+              <img src="https://images2.alphacoders.com/100/1003880.png">
             </div>
           </div>
         </div>
