--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -2,17 +2,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="mu-kindergarten-close-button" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
+            </span>
+        </button>
+        <button type="button" class="mu-kindergarten-modal-button mu-previous hidden" onclick="mumuki.kindergarten.modal.prevSlide()" aria-label="Previous">
+            <span aria-hidden="true">
+              <i class="fa fa-fw fa-arrow-left fa-3x"></i>
+            </span>
+        </button>
+        <button type="button" class="mu-kindergarten-modal-button mu-next" onclick="mumuki.kindergarten.modal.nextSlide()" aria-label="Next">
+            <span aria-hidden="true">
+              <i class="fa fa-fw fa-arrow-right fa-3x"></i>
             </span>
         </button>
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <div class="mu-kindergarten-modal-markdown">
-                <%= exercise.description_context %>
-              </div>
+              <%= exercise.description_context %>
             </div>
           </div>
         </div>
