--- a/app/views/book/_header.html.erb
+++ b/app/views/book/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="book-header <%= current_user? ? '' : 'logged' %>">
   <h1>ム mumuki<%= Organization.current.title_suffix %></h1>
 
-  <img src="<%= Organization.current.banner_url %>" alt="<%= Organization.current.display_name %> - Mumuki">
+  <img src="<%= Organization.current.banner_url %>" alt="<%= Organization.current.display_name %>">
   <h2><%= @book.name %></h2>
 
   <% unless Organization.current.central? %>
