Add message for unlocked avatar on guide corollary

--- a/app/views/layouts/modals/_guide_corollary.html.erb
+++ b/app/views/layouts/modals/_guide_corollary.html.erb
@@ -6,6 +6,7 @@
           <span aria-hidden="true">&times;</span></button>
         <div class="guide-corollary-title">
           <h3 class="text-left" id="gridSystemModalLabel"><%= t :guide_finished, guide: guide.name %> </h3>
+          <p><%= t :unlocked_medal_as_avatar %></p>
           <%= corollary_medal_for guide %>
         </div>
       </div>
