--- a/app/views/layouts/modals/_kindergarten_results.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results.html.erb
@@ -1,6 +1,6 @@
 <div class="modal fade mu-kids-results mu-kindergarten-context" id="kids-results" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content <%= icon_class_for @assignment if @assignment%>">
+    <div class="modal-content">
       <div class="modal-body">
         <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
@@ -10,16 +10,11 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12 submission-results">
-              <% if current_user? %>
-                <% if @assignment.solved? %>
-                  <%= corollary_box @exercise %>
-                <% else %>
-                  <img src="//feranzures.files.wordpress.com/2010/09/dreamstime_6604144.jpg" alt="failure">
-                <% end %>
-              <% end %>
             </div>
           </div>
         </div>
+      </div>
+      <div class="modal-footer">
       </div>
     </div>
   </div>
