Show medal only if guide and organization allow

--- a/app/views/layouts/modals/_guide_corollary.html.erb
+++ b/app/views/layouts/modals/_guide_corollary.html.erb
@@ -6,8 +6,10 @@
           <span aria-hidden="true">&times;</span></button>
         <div class="guide-corollary-title">
           <h3 class="text-left" id="gridSystemModalLabel"><%= t :guide_finished, guide: guide.name %> </h3>
-          <p><%= t :unlocked_medal_as_avatar %></p>
-          <%= corollary_medal_for guide %>
+          <% if should_display_medal? @guide, Organization.current %>
+            <p><%= t :unlocked_medal_as_avatar %></p>
+            <%= corollary_medal_for guide %>
+          <% end %>
         </div>
       </div>
       <div class="modal-body">
