--- a/app/views/layouts/_guide.html.erb
+++ b/app/views/layouts/_guide.html.erb
@@ -25,7 +25,9 @@
 <div class="row">
   <div class="col-md-12">
     <div class="text-box">
-      <%= content_medal_for(@guide, current_user) %>
+      <% if should_display_medal? @guide, Organization.current %>
+        <%= content_medal_for(@guide, current_user) %>
+      <% end %>
       <%= @guide.description_html %>
 
       <div class="actions">
