--- a/app/views/layouts/modals/_guide_corollary.html.erb
+++ b/app/views/layouts/modals/_guide_corollary.html.erb
@@ -6,10 +6,6 @@
           <span aria-hidden="true">&times;</span></button>
         <div class="guide-corollary-title">
           <h3 class="text-left" id="gridSystemModalLabel"><%= t :guide_finished, guide: guide.name %> </h3>
-          <% if should_display_medal? @guide, Organization.current %>
-            <p><%= t :unlocked_medal_as_avatar %></p>
-            <%= corollary_medal_for guide %>
-          <% end %>
         </div>
       </div>
       <div class="modal-body">
@@ -17,6 +13,15 @@
           <div class="row">
             <div class="col-md-12">
               <%= corollary_box guide %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 mu-last-box">
+              <hr>
+              <% if should_display_medal? @guide, Organization.current %>
+                <p><%= t :unlocked_medal_as_avatar %></p>
+                <%= corollary_medal_for guide %>
+              <% end %>
             </div>
           </div>
           <div class="row">
