Move guide medal beside the title

--- a/app/views/layouts/_guide.html.erb
+++ b/app/views/layouts/_guide.html.erb
@@ -15,8 +15,11 @@
     <h1><%= language_icon @guide.language %></h1>
   </div>
   <div class="mu-inline-block-left">
-    <h1>
+    <h1 class="pull-left">
       <%= subject.name %>
+      <% if should_display_medal? @guide, Organization.current %>
+        <%= content_medal_for(@guide, current_user) %>
+      <% end %>
       <%= teacher_info_button @guide%>
       <%= link_to_bibliotheca_guide @guide %>
     </h1>
@@ -25,9 +28,6 @@
 <div class="row">
   <div class="col-md-12">
     <div class="text-box">
-      <% if should_display_medal? @guide, Organization.current %>
-        <%= content_medal_for(@guide, current_user) %>
-      <% end %>
       <%= @guide.description_html %>
 
       <div class="actions">
