Added failure animation

--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -10,7 +10,9 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-              <img src="https://images2.alphacoders.com/100/1003880.png">
+              <div class="mu-kids-character">
+                <img/>
+              </div>
             </div>
           </div>
         </div>
