Added stop to SpeachSynthesis

--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -7,7 +7,7 @@
         <button class="mu-kindergarten-show-context" onclick="mumuki.kindergarten.showContext()">
           <i class="fa fa-fw fa-window-maximize"></i>
         </button>
-        <button class="mu-kindergarten-play-description" onclick="mumuki.kindergarten.speak('.mu-kindergarten-exercise-description', '<%= exercise.locale %>')">
+        <button class="mu-kindergarten-play-description" onclick="mumuki.kindergarten.speech.click('.mu-kindergarten-exercise-description', '<%= exercise.locale %>')">
           <i class="fa fa-fw fa-volume-up"></i>
         </button>
       </div>
