--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -1,12 +1,15 @@
 <div class="modal fade mu-kids-results-aborted mu-kindergarten-context" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content danger">
-      <div class="modal-body">
-        <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
-        </button>
+      </button>
+      <h4 class="modal-header text-broken">
+        <strong><%= t :errored %></strong>
+      </h4>
+      <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
