--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -16,7 +16,7 @@
   <div class="mu-kindergarten-hint">
     <% if exercise.hint? %>
       <button class="mu-hint-light" onclick="mumuki.kindergarten.hint.toggle()">
-        <img class="mu-hint-light on" src="/iluminated-light.png" alt="">
+        <img class="mu-hint-light on" src="https://mumuki.io/static/lamparita_on.svg" alt="">
       </button>
       <div class="mu-kindergarten-light-speech-bubble">
         <span class="mu-kindergarten-exercise-hint">
@@ -27,7 +27,7 @@
         </button>
       </div>
     <% else %>
-      <img class="mu-hint-light off" src="/sleeping-light.png" alt="">
+      <img class="mu-hint-light off" src="https://mumuki.io/static/lamparita_off.svg" alt="">
     <% end %>
   </div>
 </div>
