--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -212,7 +212,7 @@ $modal-footer-height: 95px;
 }
 #kids-results-aborted.mu-kindergarten-context {
   .modal-body{
-    height: calc(100% - #{$modal-header-height}
+    height: calc(100% - #{$modal-header-height});
   }
 }
 
@@ -299,17 +299,22 @@ $bubble-padding: 30px;
       .mu-kindergarten-show-context,
       .mu-kindergarten-play-description {
         border: $bubble-border;
-        height: 50%;
+        height: calc(50% - #{$bubble-border-width} / 2);
         width: $bubble-height / 2;
       }
 
       .mu-kindergarten-show-context {
         border-top-right-radius: 10px;
+        border-bottom-width: $bubble-border-width * 2/3;
       }
 
       .mu-kindergarten-play-description {
-        margin-top: -$bubble-border-width;
         border-bottom-right-radius: 10px;
+        border-top-width: $bubble-border-width * 2/3;
+      }
+
+      .mu-kindergarten-button-image {
+        width: 100%;
       }
 
     }
@@ -344,7 +349,7 @@ $bubble-padding: 30px;
       }
       &.on {
         cursor: pointer;
-
+        height: $light-height;
         &:hover {
           filter: brightness(1.15);
         }
