Use flexbox in guide view instead of relying on pull-left

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -1,9 +1,9 @@
 @import "modules/avatar";
 @import "modules/book_header";
 @import "modules/breadcrumb";
-@import "modules/chapter_show";
 @import "modules/checkboxes";
 @import "modules/console";
+@import "modules/content_show";
 @import "modules/datepicker";
 @import "modules/discussion";
 @import "modules/dropdown";
