Do not use 'content' to refer to a medal's illustration to avoid ambiguities

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_medal.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_medal.scss
@@ -5,7 +5,7 @@
     margin-left: 10px;
   }
 
-  &.content {
+  &.inlay {
     height: 70px;
     border-radius: 50%;
 
@@ -27,7 +27,7 @@
     right: 0;
   }
 
-  &.content-corollary {
+  &.inlay-corollary {
     height: 107px;
     border-radius: 50%;
 
