--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_medal.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_medal.scss
@@ -1,41 +1,45 @@
 .mu-medal {
   &.outline {
-    height: 100px;
     position: absolute;
-    margin-left: 10px;
+
+    &.content {
+      height: 100px;
+
+      margin-left: 10px;
+    }
+
+    &.corollary {
+      height: 150px;
+
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+    }
   }
 
   &.inlay {
-    height: 70px;
+    position: relative;
     border-radius: 50%;
 
-    position: relative;
-    left: 25px;
-    top: 24px;
+    &.content {
+      height: 70px;
 
-    margin-right: 30px;
-    margin-bottom: 15px;
-  }
+      left: 25px;
+      top: 24px;
 
-  &.outline-corollary {
-    height: 150px;
-    position: absolute;
+      margin-right: 30px;
+      margin-bottom: 15px;
+    }
 
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-  }
+    &.corollary {
+      height: 107px;
 
-  &.inlay-corollary {
-    height: 107px;
-    border-radius: 50%;
+      display: block;
+      top: 35px;
 
-    display: block;
-    position: relative;
-    top: 35px;
-
-    margin: 0 auto 20px;
+      margin: 0 auto 20px;
+    }
   }
 
   &.unacquired {
