--- a/app/views/layouts/_guide.html.erb
+++ b/app/views/layouts/_guide.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="mu-inline-block-left guide-header">
     <h1> <%= subject.name %> </h1>
-    <% if should_display_medal? @guide, Organization.current %>
+    <% if current_user? && should_display_medal?(@guide, Organization.current) %>
       <%= content_medal_for(@guide, current_user) %>
     <% end %>
     <%= teacher_info_button @guide%>
