--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -24,6 +24,7 @@
 @import "modules/popover";
 @import "modules/progress_bar";
 @import "modules/progress_listing";
+@import "modules/terms";
 @import "modules/timer";
 @import "modules/upload";
 @import "modules/user_profile";
