--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -6,8 +6,7 @@
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
       </button>
-      <h4 class="modal-header text-broken">
-        <strong><%= t :errored %></strong>
+      <h4 class="modal-header">
       </h4>
       <div class="modal-body">
         <div class="container-fluid">
