Add class to forum terms div

--- a/app/views/discussions/terms.html.erb
+++ b/app/views/discussions/terms.html.erb
@@ -2,9 +2,11 @@
   <h1><%= t :forum_terms %></h1>
 </div>
 
-<div>
+<div class="forum-terms">
   <% @forum_terms.each do |term| %>
-    <%= term.content_html %>
+    <div class="forum-term">
+      <%= term.content_html %>
+    </div>
   <% end %>
 </div>
 
