Fixed board size

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -30,7 +30,7 @@ $modal-footer-height: 95px;
     }
 
     .mu-kids-blocks {
-      padding-bottom: 15px;
+      padding-right: 15px;
     }
 
     &.mu-full-workspace {
