Chooser initial styles

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -19,6 +19,7 @@
 @import "modules/kids_results";
 @import "modules/medal";
 @import "modules/modal";
+@import "modules/organization_card";
 @import "modules/organization_chooser";
 @import "modules/overlap";
 @import "modules/popover";
