--- a/app/views/layouts/_organization_chooser.html.erb
+++ b/app/views/layouts/_organization_chooser.html.erb
@@ -1,9 +1,9 @@
 <div class="modal fade mu-organization-chooser" id="redirect" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" style="width: 800px;">
       <div class="modal-header">
-        <p class="modal-title text-center title-font"><%= t :explain_redirect %></p>
-        <p class="modal-title text-center title-font"><%= t :ask_redirect %></p>
+        <p class="modal-title text-center title-font">Tenés acceso a otros recorridos con contenido similar. </p>
+        <p class="modal-title text-center title-font">¿Dónde querés seguir aprendiendo?</p>
       </div>
       <div class="modal-body">
         <div class="container-fluid">
