Added kindergarten submit result translations

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -114,6 +114,11 @@ $modal-footer-height: 95px;
       border-radius: $border-width;
       box-shadow: none;
 
+      .modal-header {
+        text-align: center;
+        text-transform: uppercase;
+      }
+
       .modal-body {
         height: 100%;
         div, p {
