--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_kindergarten.scss
@@ -21,7 +21,7 @@ $modal-footer-height: 95px;
     }
 
     .mu-kids-blocks {
-      padding-right: 15px;
+      margin-right: 15px;
     }
 
     &.mu-full-workspace {
@@ -69,7 +69,7 @@ $modal-footer-height: 95px;
       padding: 30px;
       img {
         padding: 0;
-        border: 5px solid black;
+        border: 3px solid black;
         border-radius: 30px;
       }
     }
@@ -98,14 +98,36 @@ $modal-footer-height: 95px;
     .modal-content {
       position: absolute;
 
-      $width: 800px;
-      $height: $width * 0.625;
+      $width-lg: 800px;
+      $height-lg: $width-lg * 0.625;
 
-      width: $width;
-      height: $height;
+      width: $width-lg;
+      height: $height-lg;
 
-      top: calc(50vh - #{$height} / 2);
-      left: calc(50vw - #{$width} / 2);
+      top: calc(50vh - #{$height-lg} / 2);
+      left: calc(50vw - #{$width-lg} / 2);
+
+      @media (orientation: landscape)  and (max-height: $height-lg + 50px) {
+        $height-sm: 85vh;
+        $width-sm: $height-sm / 0.625;
+
+        width: $width-sm;
+        height: $height-sm;
+
+        top: calc(50vh - #{$height-sm} / 2);
+        left: calc(50vw - #{$width-sm} / 2);
+      }
+
+      @media (orientation: portrait) {
+        $height-sm: 85vh;
+        $width-sm: 85vw;
+
+        width: $width-sm;
+        height: $height-sm;
+
+        top: calc(50vh - #{$height-sm} / 2);
+        left: calc(50vw - #{$width-sm} / 2);
+      }
 
       $border-width: 16px;
       border-width: $border-width;
