Improving terms acceptance styles

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_terms.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_terms.scss
@@ -29,7 +29,13 @@
   padding: 1.25rem;
 }
 
-.terms-acceptance-btn {
-  margin-top: 10px;
-  display: block
+.terms-acceptance {
+  margin-top: 30px;
+
+  .terms-acceptance-btn {
+    margin-top: 10px;
+    display: block
+  }
 }
+
+
