--- a/app/views/users/terms.html.erb
+++ b/app/views/users/terms.html.erb
@@ -17,14 +17,14 @@
 </div>
 
 <% if @user&.has_role_terms_to_accept? %>
-  <br>
-  <%= form_for :user, url: user_terms_path, method: :post  do |f| %>
-    <span>
-      <%= f.check_box :terms_of_service, required: true, onInvalid: "this.setCustomValidity('#{t(:terms_and_conditions_must_be_accepted)}')", onChange: "this.setCustomValidity(validity.valueMissing ? '#{t(:terms_and_conditions_must_be_accepted)}' : '')" %>
-      <%= t(:accept_terms) %>
-    </span>
-    <br>
-    <%= f.submit t(:accept), class: 'btn btn-success terms-acceptance-btn' %>
-  <% end %>
+  <div class="terms-acceptance">
+    <%= form_for :user, url: user_terms_path, method: :post  do |f| %>
+      <span class="terms-acceptance-checkbox">
+        <%= f.check_box :terms_of_service, required: true, onInvalid: "this.setCustomValidity('#{t(:terms_and_conditions_must_be_accepted)}')", onChange: "this.setCustomValidity(validity.valueMissing ? '#{t(:terms_and_conditions_must_be_accepted)}' : '')" %>
+        <%= t(:accept_terms) %>
+      </span>
+      <%= f.submit t(:accept), class: 'btn btn-success terms-acceptance-btn' %>
+    <% end %>
+  </div>
 <% end %>
 
