--- a/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
+++ b/app/views/layouts/modals/_kindergarten_results_aborted.html.erb
@@ -1,13 +1,16 @@
 <div class="modal fade mu-kids-results-aborted mu-kindergarten-context" id="kids-results-aborted" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content danger">
+    <div class="modal-content broken">
       <button type="button" class="mu-kindergarten-modal-button mu-close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
       </button>
-      <h4 class="modal-header">
-      </h4>
+      <div class="modal-header">
+        <h4 class="modal-title text-broken">
+          <strong><%= t :kindergarten_aborted %></strong>
+        </h4>
+      </div>
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
