Extracting duplicated logic bwtween kids and kindergarten

--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -1,7 +1,7 @@
 <div class="modal fade mu-kindergarten-context" id="mu-kids-context" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <button type="button" class="mu-kindergarten-modal-button mu-close" data-waiting="<%= t :loading %>" data-dismiss="modal" aria-label="Close">
+      <button type="button" class="mu-kindergarten-modal-button mu-close" data-waiting="" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
