Renamed kids files and classses

--- a/app/views/layouts/modals/_kindergarten_context.html.erb
+++ b/app/views/layouts/modals/_kindergarten_context.html.erb
@@ -6,12 +6,12 @@
               <i class="fa fa-fw fa-times fa-3x"></i>
             </span>
       </button>
-      <button type="button" class="mu-kindergarten-modal-button mu-previous hidden" onclick="mumuki.kindergarten.context.prevSlide()" aria-label="Previous">
+      <button type="button" class="mu-kindergarten-modal-button mu-previous hidden" onclick="mumuki.kids.context.prevSlide()" aria-label="Previous">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-arrow-left fa-3x"></i>
             </span>
       </button>
-      <button type="button" class="mu-kindergarten-modal-button mu-next" onclick="mumuki.kindergarten.context.nextSlide()" aria-label="Next">
+      <button type="button" class="mu-kindergarten-modal-button mu-next" onclick="mumuki.kids.context.nextSlide()" aria-label="Next">
             <span aria-hidden="true">
               <i class="fa fa-fw fa-arrow-right fa-3x"></i>
             </span>
