--- a/app/views/layouts/_kindergarten.html.erb
+++ b/app/views/layouts/_kindergarten.html.erb
@@ -4,10 +4,10 @@
     <div class="mu-kindergarten-character-speech-bubble">
       <span class="mu-kindergarten-exercise-description"><%= exercise.description_task %></span>
       <div class="mu-kindergarten-buttons">
-        <button class="mu-kindergarten-show-context" onclick="mumuki.kindergarten.context.showContext()">
+        <button class="mu-kindergarten-show-context" onclick="mumuki.kids.context.showContext()">
           <img class="mu-kindergarten-button-image" src="https://mumuki.io/static/show-context.svg" alt="">
         </button>
-        <button class="mu-kindergarten-play-description" onclick="mumuki.kindergarten.speech.click('.mu-kindergarten-exercise-description', '<%= exercise.locale %>')">
+        <button class="mu-kindergarten-play-description" onclick="mumuki.kids.speech.click('.mu-kindergarten-exercise-description', '<%= exercise.locale %>')">
           <img class="mu-kindergarten-button-image mu-kindergarten-play" src="https://mumuki.io/static/audio-play.svg" alt="">
           <img class="mu-kindergarten-button-image mu-kindergarten-stop hidden" src="https://mumuki.io/static/audio-stop.svg" alt="">
         </button>
@@ -16,14 +16,14 @@
   </div>
   <div class="mu-kindergarten-hint">
     <% if exercise.hint? %>
-      <button class="mu-hint-light" onclick="mumuki.kindergarten.hint.toggle()">
+      <button class="mu-hint-light" onclick="mumuki.kids.hint.toggle()">
         <img class="mu-hint-light on" src="https://mumuki.io/static/lamparita_on.svg" alt="">
       </button>
       <div class="mu-kindergarten-light-speech-bubble">
         <span class="mu-kindergarten-exercise-hint">
           <%= exercise.hint.markdownified %>
         </span>
-        <button class="expand-or-collapse-hint-media" onclick="mumuki.kindergarten.hint.toggleMedia()">
+        <button class="expand-or-collapse-hint-media" onclick="mumuki.kids.hint.toggleMedia()">
           <i class="fa fa-fw fa-2x fa-caret-up"></i>
         </button>
       </div>
