--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,17 +19,17 @@
       </div>
       <div class="mu-navbar-avatar">
         <% if current_logged_user? %>
-          <i class ="fa fa-star fa-fw fa-2x"></i>
+          <i class="fa fa-star fa-fw fa-2x navbar-icon"></i>
           <div class="dropdown">
             <span>
               <a class="notifications-box <%= has_notifications? ? '' : 'notifications-box-empty' %>" href=<%= "#{user_notifications_path}" %>>
-                <i class="fa fa-bell fa-fw fa-2x"></i>
+                <i class="fa fa-bell fa-fw fa-2x navbar-icon"></i>
                   <span class="badge badge-notifications"><%= notifications_count %></span>
               </a>
             </span>
           </div>
           <div class="dropdown">
-            <div id="profileDropdown" class="profile-dropdown" data-toggle="dropdown" aria-label="<%= t(:user) %>" role="menu" tabindex="0">
+            <div id="profileDropdown" class="profile-dropdown navbar-icon" data-toggle="dropdown" aria-label="<%= t(:user) %>" role="menu" tabindex="0">
               <%= profile_picture_for current_user %>
               <span class="caret"></span>
             </div>
