Add level icon and number on profile

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
@@ -36,6 +36,21 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+
+  .mu-level-number {
+    position: absolute;
+    margin-top: 11px;
+    margin-left: -86px;
+    width: 87px;
+
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: white;
+
+    user-select: none;
+    pointer-events: none;
+  }
 }
 
 .mu-profile-info-right {
