Add level text on profile

--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -11,6 +11,7 @@
       <div>
         <i class="fa fa-star fa-fw fa-4x"></i>
         <span class="mu-level-number"></span>
+        <p><%= t :level %></p>
       </div>
     <% end %>
   </div>
