Add level progress around avatar on profile

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
@@ -37,6 +37,12 @@
   align-items: center;
   text-align: center;
 
+  .mu-level-progress {
+    position: relative;
+    top: -275px;
+    margin-bottom: -275px;
+  }
+
   .mu-level-number {
     position: absolute;
     margin-top: 11px;
