--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -8,6 +8,9 @@
   <div class="col-md-4 mu-profile-info-left">
     <%= profile_picture_for(@user, id: 'mu-user-avatar', class: 'mu-user-avatar') %>
     <% if Organization.current.gamification_enabled? %>
+      <svg class="mu-level-progress" width="300" height="300" viewBox="0 0 100 100">
+        <path id="mu-level-progress" stroke-linecap="round" stroke="#24b8aa" stroke-width="4" stroke-dasharray="0, 999" fill="none" d="M50 10 a 40 40 0 0 1 0 80 a 40 40 0 0 1 0 -80"></path>
+      </svg>
       <div>
         <i class="fa fa-star fa-fw fa-4x"></i>
         <span class="mu-level-number"></span>
