--- a/app/views/exercise_solutions/_assistant_rules_box.html.erb
+++ b/app/views/exercise_solutions/_assistant_rules_box.html.erb
@@ -4,7 +4,7 @@
   <a data-toggle="collapse" href="#assistance-details-section" class="example-see-more">
     <%= t :view_details %>
   </a>
-  <div id="assistance-details-section" class="<%= 'collapse' if assistance_rules_passed?(assignment) %> results-item">
+  <div id="assistance-details-section" class="<%= 'collapse' if assistance_rules_passed?(assignment) %> in results-item">
     <hr>
     <%= yield %>
   </div>
