--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       <div class="mu-navbar-avatar">
         <% if current_logged_user? %>
           <% if Organization.current.gamification_enabled? %>
-            <i class="fa fa-star fa-fw fa-2x navbar-icon"></i>
+            <i class="fa fa-star fa-fw fa-2x navbar-icon mu-level-tooltip" data-toggle="tooltip" data-placement="bottom" title="<%= t(:level) %>"></i>
             <span class="mu-level-number"></span>
           <% end %>
           <div class="dropdown">
