Move mu-level-number style so it can be used not only on the profile

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
@@ -42,7 +42,9 @@
     top: -275px;
     margin-bottom: -275px;
   }
+}
 
+.mu-level {
   .mu-level-number {
     position: absolute;
     margin-top: 11px;
