Refactor assistance rules display method and condition

--- a/app/views/exercise_solutions/_assistant_rules_box.html.erb
+++ b/app/views/exercise_solutions/_assistant_rules_box.html.erb
@@ -1,10 +1,10 @@
-<% if assistance_rules_passed? assignment %>
+<% if should_display_assistance_box? assignment %>
   <hr>
   <%= assistance_box assignment %>
   <a data-toggle="collapse" href="#assistance-details-section" class="example-see-more">
     <%= t :view_details %>
   </a>
-  <div id="assistance-details-section" class="<%= 'collapse' if assistance_rules_passed?(assignment) %> in results-item">
+  <div id="assistance-details-section" class="<%= 'collapse' if should_display_assistance_box?(assignment) %> in results-item">
     <hr>
     <%= yield %>
   </div>
