--- a/app/views/exercise_solutions/_results_title.html.erb
+++ b/app/views/exercise_solutions/_results_title.html.erb
@@ -1,3 +1,8 @@
 <h4 class="text-<%= icon_class_for(contextualization.submission_status) %>">
   <strong><%= fa_icon icon_type_for(contextualization.submission_status) %> <%= t_contextualization_status contextualization %></strong>
+  <% if Organization.current.gamification_enabled? %>
+    <strong><small class="text-success">
+      +<span class="mu-experience "></span>xp
+    </small></strong>
+  <% end %>
 </h4>
