--- a/app/views/layouts/modals/_level_up.html.erb
+++ b/app/views/layouts/modals/_level_up.html.erb
@@ -5,14 +5,19 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span></button>
         <div class="guide-corollary-title">
-          <h3 class="text-left" id="gridSystemModalLabel"></h3>
+          <h3 class="text-left" id="gridSystemModalLabel"><%= t :level_up %></h3>
         </div>
       </div>
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
-
+              <div class="text-center mu-level">
+                <i class="fa fa-star fa-fw fa-4x"></i>
+                <span class="mu-level-number"></span>
+                <p></p>
+                <p id="mu-solve-more-exercises"> <%= (t :solve_more_exercises_to_level_up).html_safe %></p>
+              </div>
             </div>
           </div>
         </div>
