--- a/app/views/exercise_solutions/_results_title.html.erb
+++ b/app/views/exercise_solutions/_results_title.html.erb
@@ -2,7 +2,7 @@
   <strong><%= fa_icon icon_type_for(contextualization.submission_status) %> <%= t_contextualization_status contextualization %></strong>
   <% if Organization.current.gamification_enabled? %>
     <strong><small class="text-success">
-      +<span class="mu-experience "></span>xp
+      <span class="mu-experience"></span>
     </small></strong>
   <% end %>
 </h4>
